# VibroAcustica

./: README.md  pyproject.toml
notebooks/: Trabalho1.ipynb  Trabalho2.ipynb  mass_matrix_mrr.npy  stiffness_matrix_mrr.npy
