[tool.poetry]
name = "vibroacustica"
version = "0.1.0"
description = ""
authors = ["Victor Bauler <victor.bauler@lva.ufsc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.3"
ipykernel = "^6.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
