[tool.poetry]
name = "vibroacustica"
version = "0.1.0"
description = ""
authors = ["Victor Bauler <victor.bauler@lva.ufsc.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
ipykernel = "^6.23.1"
sympy = "^1.12"
pandas = "^2.0.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
